fix: improve .k-button.k-bare z-index

--- a/scss/button/_layout.scss
+++ b/scss/button/_layout.scss
@@ -239,7 +239,7 @@
             transition: opacity .2s ease-in-out;
             pointer-events: none;
             position: absolute;
-            z-index: -1;
+            z-index: 0;
             top: -1px;
             left: -1px;
             right: -1px;
@@ -252,7 +252,7 @@
             opacity: 0;
             pointer-events: none;
             position: absolute;
-            z-index: -1;
+            z-index: 0;
             top: -1px;
             left: -1px;
             right: -1px;
